force-app/main/default/objects/Service_Profile__c/fields/SN_Snow_Removal__c.field-meta.xml
<CustomField>
    <fullName>SN_Snow_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snow Removal</label>
    <type>Checkbox</type>
</CustomField>