force-app/main/default/objects/Service_Profile__c/fields/Survey_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Date__c</fullName>
    <label>Survey Response Date</label>
    <type>DateTime</type>
</CustomField>