force-app/main/default/objects/Service_Profile__c/fields/Tree_Installation__c.field-meta.xml
<CustomField>
    <fullName>Tree_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tree Installation</label>
    <type>Checkbox</type>
</CustomField>