force-app/main/default/objects/Service_Profile__c/fields/TS_Stump_Grinding__c.field-meta.xml
<CustomField>
    <fullName>TS_Stump_Grinding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stump Grinding</label>
    <type>Checkbox</type>
</CustomField>