force-app/main/default/objects/Service_Profile__c/recordTypes/Cleaning_Service.recordType-meta.xml
<RecordType>
    <fullName>Cleaning_Service</fullName>
    <active>true</active>
    <label>Cleaning Service</label>
</RecordType>