force-app/main/default/objects/Service_Profile__c/recordTypes/Lawn_Service.recordType-meta.xml
<RecordType>
    <fullName>Lawn_Service</fullName>
    <active>true</active>
    <label>Lawn Service</label>
</RecordType>