force-app/main/default/objects/Service_Profile__c/recordTypes/Pool_Service.recordType-meta.xml
<RecordType>
    <fullName>Pool_Service</fullName>
    <active>true</active>
    <label>Pool Service</label>
</RecordType>