force-app/main/default/objects/Service_Profile__c/recordTypes/Tree_Service.recordType-meta.xml
<RecordType>
    <fullName>Tree_Service</fullName>
    <active>true</active>
    <label>Tree Service</label>
</RecordType>