force-app/main/default/objects/Service_Profile__c/validationRules/CRP_Insurance_Must_Be_Verified.validationRule-meta.xml
<ValidationRule>
    <fullName>CRP_Insurance_Must_Be_Verified</fullName>
    <active>false</active>
    <description>Insurance must be verified and the field &quot;Tree Insurance Verified&quot; on the Contractor Recruitment Profile must be marked as TRUE in order to update this record with any Tree Specialist Capabilities.</description>
    <errorConditionFormula>IF(
Contractor_Recruitment_Profile__r.Tree_Insurance_Verified__c = FALSE &amp;&amp;
TS_Stump_Grinding__c = TRUE ||
LS_Tree_Trimming__c  = TRUE ||
LS_Tree_Removal__c = TRUE, TRUE,FALSE)</errorConditionFormula>
    <errorMessage>&quot;Tree Insurance Verified&quot; on the Contractor Recruitment Profile must be selected in order to add any Tree Specialist Capabilities to this Profile.</errorMessage>
</ValidationRule>