force-app/main/default/objects/Service_Profile__c/validationRules/RequiresWorkCrewRecordTypeOnAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiresWorkCrewRecordTypeOnAccount</fullName>
    <active>true</active>
    <description>Service Profile requires WorkCrew Record Type on Account</description>
    <errorConditionFormula>Account__r.RecordType.DeveloperName != &apos;Workcrew&apos;</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>A Service Profile can only be linked to a Contractor Workcrew Account. Please select a Workcrew account as the parent record.</errorMessage>
</ValidationRule>