force-app/main/default/objects/Service_Profile__c/listViews/Contractor_Recruitment_Service_Profile.listView-meta.xml
<ListView>
    <fullName>Contractor_Recruitment_Service_Profile</fullName>
    <filterScope>Queue</filterScope>
    <label>Contractor Recruitment</label>
    <queue>Contractor_Recruitment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>